shorter templates output

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "site_constructor",
   "version": "1.0.0",
   "description": "js pure app",
-  "main": "index.js",
   "scripts": {
-    "serve": "parcel ./src/index.html -p 4200 --open"
+    "serve": "parcel ./src/index.html -p 4200 --open",
+    "build": "parcel build ./src/index.html --no-source-maps"
   },
   "repository": {
     "type": "git",
